--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -20,6 +20,7 @@ django-allauth = "~=0.41.0"
 django-rest-auth = "~=0.9.5"
 django-extensions = "~=2.2.9"
 django-storages = "~=1.9.1"
+Pillow = "~=7.1.2"
 packaging = "*"
 drf-yasg = "~=1.17.1"
 # fcm-django is used for mobile notifications. It can be removed if unneeded.
