--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -21,6 +21,7 @@ django-rest-auth = "~=0.9.5"
 django-extensions = "~=2.2.9"
 django-storages = "~=1.9.1"
 Pillow = "~=7.1.2"
+boto3 = "~=1.14.7"
 packaging = "*"
 drf-yasg = "~=1.17.1"
 # fcm-django is used for mobile notifications. It can be removed if unneeded.
