- Working with Docker

--- a/backend/docker-compose.override.yml
+++ b/backend/docker-compose.override.yml
@@ -13,9 +13,11 @@ services:
       - "8000:${PORT}"
   postgres:
     environment:
-      POSTGRES_PASSWORD: <postgres_pwd>
+      POSTGRES_PASSWORD: admin
+      POSTGRES_USER: admin
+      POSTGRES_DB: chefout
     volumes:
-      - ./postgres-data/postgres:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql
     ports:
       - "5432:5432"
   redis:
