--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,8 +11,8 @@ RUN apk add --no-cache --update \
   build-base \
   musl-dev \
   postgresql-dev \
-  python3~=3.7.5 \
-  python3-dev~=3.7.5 \
+  python3 \
+  python3-dev \
   curl \
 # zlib, zlib-dev, and libjpeg-turbo are required by pillow
   zlib \
